# docs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml
agentbuild/: mkdocs.yml  requirements.txt
agentbuild/docs/: prerequisites.md  projects.md  setup.md  whatsapp.md
agenttest/: mkdocs.yml
agenttest/docs/: developer.md  index.md  setup.md
agenttest/docs/styles/: custom.css
docs/: agent-build.md  developer.md  index.md
docs/styles/: custom.css
patternai-website/: mkdocs.yml
patternai-website/docs/: index.md  projects.md
patternai-website/docs/styles/: custom.css
site/: 404.html  index.html  sitemap.xml
site/agent-build/: index.html
site/agent-build/developer/: index.html
site/agent-build/prerequisites/: index.html
site/agent-build/projects/: index.html
site/agent-build/setup/: index.html
site/agent-build/whatsapp/: index.html
site/agent-test/: index.html
site/agent-test/setup/: index.html
site/developer/: index.html
site/prerequisites/: index.html
site/search/: search_index.json
site/setup/: index.html
site/user/: index.html
site/whatsapp/: index.html
