[project]
name = "patternai-agent-build"
version = "0.1.0"
description = "Documentation."
authors = [
    { name = "Jacob Celestine", email = "jacobceles@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-monorepo-plugin>=1.1.2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20250402"

[tool.mypy]
plugins  = "pydantic.mypy"
follow_imports  = "silent"
no_implicit_optional = true
disallow_untyped_defs   = true
namespace_packages  = true
explicit_package_bases   = true
exclude  = ['clients/demo/app.py']

[tool.pydantic-mypy]
init_forbid_extra  = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
    "E", "F", "Q", "UP", "B", "S", "RUF", "C", "ERA", "PIE", "SIM", "A", "G"
]
ignore = [
    "ERA001", "C901", "SIM112", "UP017"
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["D", "S"]
